<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/party_name_text"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/custom_dialog"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/party_location_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:text="@string/custom_dialog"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/party_date_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:inputType="none"
            android:text="@string/custom_dialog"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/party_participants"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginRight="5dp"
            android:inputType="none"
            android:focusable="false"
            android:text="@string/custom_dialog"
            android:textSize="21sp"
            android:drawableStart="@android:drawable/presence_online"
            android:drawablePadding="5dp"/>

        <ListView
            android:id="@+id/invite_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="100dp"
            android:divider="#787878"
            android:dividerHeight="1dp"/>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/editFloatingBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="35dp"
        android:layout_marginEnd="20dp"
        app:srcCompat="@android:drawable/ic_menu_edit" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/removeFloatingBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_marginBottom="35dp"
        android:layout_marginStart="20dp"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

    <Button
        android:id="@+id/invite_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="40dp"
        android:text="@string/invite_people"/>

    <Button
        android:visibility="gone"
        android:id="@+id/accept_invite_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="40dp"
        android:text="@string/accept_invite" />

    <Button
        android:visibility="gone"
        android:id="@+id/decline_invite_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="40dp"
        android:text="@string/decline_invite" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>